# sefi

./: .clippy.toml  .gitignore  .neoconf.json  .rustfmt.toml  Cargo.toml  README.md  build.sh  secrets.toml
.github/workflows/: release.yml  rust.yml
benches/: stream_benchmark.rs
benches/data/: gen_bench_data.sh
src/: main.rs
tests/: integration_tests.rs
